Set owning layer id on transform nodes in SPv2.

http://crrev.com/2758343002 switched LayerTreeHostImpl to
look up transform nodes by element id rather than layer id.

This led to identifying a transform animation change in
SPv2 in some cases that were not identified previously.

This in turn led to raster scale computation crashing due
to expecting an owning layer id on the involved transform
node, whereas our SPv2 compositing logic that builds the
cc transform node was not setting an owning layer id.

We should update cc-side animation logic to use element
id and property tree nodes wherever possible rather than
layers, but in interim, setting an owning layer id on the
cc transform node is an acceptable solution.

BUG=707281
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2800983002
Cr-Commit-Position: refs/heads/master@{#462605}

Former-commit-id: f03d05f724aabaf8e9db6df23bb38dbc1fe04ff6